terraform/modules/emxchange-security-groups/ec2-security-groups/ec2_sg_main.tf
resource "aws_security_group" "http_https_ssh" {
  name        = "team-2-emxchange-ec2-security-group"
  description = "Security Group for Team 2 EmExchange app"

  # ssh for dev
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # http
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # https
  ingress {
    from_port         = 443
    to_port           = 443
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
  }

  # nfs for efs
  ingress {
    from_port         = 2049
    to_port           = 2049
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
  }

  # All outbound
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

output "id" {
  value = "${aws_security_group.http_https_ssh.name}"
}
